Work in progress
- Now uses actions instead of commands

--- a/src/plugins/core/preferences/panels/touchbar/html/controls.html
+++ b/src/plugins/core/preferences/panels/touchbar/html/controls.html
@@ -12,6 +12,7 @@
 				<tr>
 					<th class="rowIcon">{{ i18n("icon") }}</th>
 					<th class="rowAction">{{ i18n("action") }}</th>
+					<th class="rowActionButton"></th>
 					<th class="rowLabel">{{ i18n("buttonLabel") }}</th>					
 				</tr>
 			</thead>
