--- a/src/plugins/core/preferences/panels/touchbar/html/rows.html
+++ b/src/plugins/core/preferences/panels/touchbar/html/rows.html
@@ -29,31 +29,16 @@
 						<input id="{{ group:id() }}_button{{ i }}_icon" type="file" accept="image/png, image/gif, image/jpeg, image/tiff" />						
 					</div>
 				</td>
-				<td class="rowAction">		
-					<select id="{{ group:id() }}_button{{ i }}_action" class="actionSelect">
-						<option value="none">{{ i18n("none") }}</option>		
-						{%
-							local cmds = {}
-							for id,cmd in pairs(group:getAll()) do
-								cmds[#cmds+1] = cmd
-							end
-							table.sort(cmds, function(a, b) return a:getTitle() < b:getTitle() end)
-							for _,cmd in ipairs(cmds) do
-								local selected = ""
-								if tb.getAction(tostring(i), group:id()) == cmd:id() then
-									selected = ' selected="selected"'
-								end
-						%}			
-						<option value="{{ cmd:id() }}" {{selected}}>{{ cmd:getTitle() }}</option>												
-						{%
-							end
-						%}			
-					</select>		
+				<td class="rowAction">	
+					<input type="text" id="{{ group:id() }}_button{{ i }}_action" class="actionTextbox" value="{{ tb.getActionTitle(tostring(i), group:id()) or "None" }}" disabled>
+				</td>			
+				<td class="rowActionButton">		
+					<a id="{{ group:id() }}_button{{ i }}_actionButton" href="#" class="button actionButton">Select</a>
 				</td>
 				<td class="rowLabel">
 					<input type="text" id="{{ group:id() }}_button{{ i }}_label" class="buttonLabel" value="{{ tb.getLabel(tostring(i), group:id()) or "None" }}">
 				</td>
-				<script>					
+				<script>																					
 						/* 
 						--------------------------------------------------------------------------------	
 						LABEL: 
@@ -193,11 +178,11 @@
 						--------------------------------------------------------------------------------	
 						*/	
 				
-						var {{ group:id() }}_button{{ i }}_action;
-						{{ group:id() }}_button{{ i }}_action = document.getElementById("{{ group:id() }}_button{{ i }}_action");
-						{{ group:id() }}_button{{ i }}_action.addEventListener("change", updateAction{{ i }}, false);
+						var {{ group:id() }}_button{{ i }}_actionButton;
+						{{ group:id() }}_button{{ i }}_actionButton = document.getElementById("{{ group:id() }}_button{{ i }}_actionButton");
+						{{ group:id() }}_button{{ i }}_actionButton.addEventListener("click", updateAction{{ i }}, false);
 						
-						function updateAction{{ i }}(e) {								
+						function updateAction{{ i }}(e) {													
 							//
 							// Action Callback:
 							//
@@ -208,7 +193,6 @@
 										type: "updateAction",
 										groupID: "{{ group:id() }}",
 										buttonID: "{{ i }}",
-										action: {{ group:id() }}_button{{ i }}_action.value,
 									},
 								}
 								webkit.messageHandlers.{{ webviewLabel }}.postMessage(result);
