--- a/src/plugins/core/preferences/panels/touchbar/html/panel.html
+++ b/src/plugins/core/preferences/panels/touchbar/html/panel.html
@@ -1,3 +1,3 @@
 <style>{(css/touchbar.css)}</style>
-<h3 class="uiItem"><span class="touchBarGroupSelect">{* touchBarGroupSelect *}</span>{{ i18n "customiseTouchBar" }}</h3>
+<h3 class="uiItem"><span class="touchBarGroupSelect">{* touchBarGroupSelect *}</span>{{ i18n("layoutEditor") }}</h3>
 {(html/controls.html, context)}
