--- a/src/plugins/core/preferences/panels/touchbar/html/controls.html
+++ b/src/plugins/core/preferences/panels/touchbar/html/controls.html
@@ -11,7 +11,7 @@
 			<thead>
 				<tr>
 					<th class="rowIcon">{{ i18n("icon") }}</th>
-					<th class="rowAction">{{ i18n("action") }}</th>
+					<th class="rowAction">{{ i18n("actionOrWidget") }}</th>
 					<th class="rowActionButton"></th>
 					<th class="rowLabel">{{ i18n("buttonLabel") }}</th>					
 				</tr>
