--- a/src/plugins/core/preferences/panels/streamdeck/html/controls.html
+++ b/src/plugins/core/preferences/panels/streamdeck/html/controls.html
@@ -10,10 +10,10 @@
 		<table class="streamDeck">
 			<thead>
 				<tr>
-					<th class="rowIcon">{{ i18n("icon") }}</th>
-					<th class="rowAction">{{ i18n("actionOrWidget") }}</th>
-					<th class="rowActionButton"></th>
-					<th class="rowLabel">{{ i18n("buttonLabel") }}</th>
+					<th class="sdRowIcon">{{ i18n("icon") }}</th>
+					<th class="sdRowAction">{{ i18n("actionOrWidget") }}</th>
+					<th class="sdRowActionButton"></th>
+					<th class="sdRowLabel">{{ i18n("buttonLabel") }}</th>
 				</tr>
 			</thead>
 			<tbody>
