--- a/src/plugins/core/preferences/panels/touchbar/html/rows.html
+++ b/src/plugins/core/preferences/panels/touchbar/html/rows.html
@@ -4,15 +4,15 @@
 			<tr>
 				<td class="tbRowIcon">
 					{%
-						local result = tb.getIcon(tostring(i), group:id())
+						local result = tb.getIcon(tostring(i), groupID)
 						local class=""
 						if result then
 							class = " dropped"
 						end
 					%}
 
-					<div id="{{ group:id() }}_dropzone{{ i }}" class="dropzone{{ class }}">
-						<div id="{{ group:id() }}_dropzone{{ i }}_preview">
+					<div id="{{ groupID }}_dropzone{{ i }}" class="dropzone{{ class }}">
+						<div id="{{ groupID }}_dropzone{{ i }}_preview">
 							{%
 
 								if result then
@@ -26,18 +26,18 @@
 								end
 							%}
 						</div>
-						<input id="{{ group:id() }}_button{{ i }}_icon" type="file" accept="image/png, image/gif, image/jpeg, image/tiff" />
+						<input id="{{ groupID }}_button{{ i }}_icon" type="file" accept="image/png, image/gif, image/jpeg, image/tiff" />
 					</div>
 				</td>
 				<td class="tbRowAction">
-					<input type="text" id="{{ group:id() }}_button{{ i }}_action" class="tbActionTextbox" value="{{ tb.getActionTitle(tostring(i), group:id()) or "None" }}" disabled>
+					<input type="text" id="{{ groupID }}_button{{ i }}_action" class="tbActionTextbox" value="{{ tb.getActionTitle(tostring(i), groupID) or "None" }}" disabled>
 				</td>
 				<td class="tbRowActionButton">
-					<a id="{{ group:id() }}_button{{ i }}_actionButton" href="#" class="button tbActionButton">Select</a>
-					<a id="{{ group:id() }}_button{{ i }}_clearActionButton" href="#" class="button tbActionButton">Clear</a>
+					<a id="{{ groupID }}_button{{ i }}_actionButton" href="#" class="button tbActionButton">Select</a>
+					<a id="{{ groupID }}_button{{ i }}_clearActionButton" href="#" class="button tbActionButton">Clear</a>
 				</td>
 				<td class="tbRowLabel">
-					<input type="text" id="{{ group:id() }}_button{{ i }}_label" class="tbButtonLabel" value="{{ tb.getLabel(tostring(i), group:id()) or "None" }}">
+					<input type="text" id="{{ groupID }}_button{{ i }}_label" class="tbButtonLabel" value="{{ tb.getLabel(tostring(i), groupID) or "None" }}">
 				</td>
 				<script>
 						/*
@@ -46,9 +46,9 @@
 						--------------------------------------------------------------------------------
 						*/
 
-						var {{ group:id() }}_button{{ i }}_label;
-						{{ group:id() }}_button{{ i }}_label = document.getElementById("{{ group:id() }}_button{{ i }}_label");
-						{{ group:id() }}_button{{ i }}_label.addEventListener("change", updateLabel{{ i }}, false);
+						var {{ groupID }}_button{{ i }}_label;
+						{{ groupID }}_button{{ i }}_label = document.getElementById("{{ groupID }}_button{{ i }}_label");
+						{{ groupID }}_button{{ i }}_label.addEventListener("change", updateLabel{{ i }}, false);
 
 						function updateLabel{{ i }}(e) {
 							//
@@ -59,9 +59,9 @@
 									id: "touchBarPanelCallback",
 									params: {
 										type: "updateLabel",
-										groupID: "{{ group:id() }}",
+										groupID: "{{ groupID }}",
 										buttonID: "{{ i }}",
-										label: {{ group:id() }}_button{{ i }}_label.value,
+										label: {{ groupID }}_button{{ i }}_label.value,
 									},
 								}
 								webkit.messageHandlers.{{ webviewLabel }}.postMessage(result);
@@ -77,15 +77,15 @@
 						--------------------------------------------------------------------------------
 						*/
 
-						var {{ group:id() }}_dropzone{{ i }};
-						{{ group:id() }}_dropzone{{ i }} = document.getElementById("{{ group:id() }}_dropzone{{ i }}");
-						{{ group:id() }}_dropzone{{ i }}.addEventListener("dragover", dragover{{ i }}, false);
-						{{ group:id() }}_dropzone{{ i }}.addEventListener("dragleave", dragleave{{ i }}, false);
+						var {{ groupID }}_dropzone{{ i }};
+						{{ groupID }}_dropzone{{ i }} = document.getElementById("{{ groupID }}_dropzone{{ i }}");
+						{{ groupID }}_dropzone{{ i }}.addEventListener("dragover", dragover{{ i }}, false);
+						{{ groupID }}_dropzone{{ i }}.addEventListener("dragleave", dragleave{{ i }}, false);
 
-						var {{ group:id() }}_dropzoneInput{{ i }};
-						{{ group:id() }}_dropzoneInput{{ i }} = document.getElementById("{{ group:id() }}_button{{ i }}_icon");
-						{{ group:id() }}_dropzoneInput{{ i }}.addEventListener("change", dropzoneChange{{ i }}, false);
-						{{ group:id() }}_dropzoneInput{{ i }}.addEventListener("click", dropzoneClick{{ i }}, false);
+						var {{ groupID }}_dropzoneInput{{ i }};
+						{{ groupID }}_dropzoneInput{{ i }} = document.getElementById("{{ groupID }}_button{{ i }}_icon");
+						{{ groupID }}_dropzoneInput{{ i }}.addEventListener("change", dropzoneChange{{ i }}, false);
+						{{ groupID }}_dropzoneInput{{ i }}.addEventListener("click", dropzoneClick{{ i }}, false);
 
 						function dropzoneClick{{ i }}(e) {
 							//
@@ -96,7 +96,7 @@
 									id: "touchBarPanelCallback",
 									params: {
 										type: "iconClicked",
-										groupID: "{{ group:id() }}",
+										groupID: "{{ groupID }}",
 										buttonID: "{{ i }}",
 									},
 								}
@@ -108,18 +108,18 @@
 						}
 
 						function dragover{{ i }}(e) {
-							{{ group:id() }}_dropzone{{ i }}.classList.add("hover");
+							{{ groupID }}_dropzone{{ i }}.classList.add("hover");
 						}
 
 						function dragleave{{ i }}(e) {
-							{{ group:id() }}_dropzone{{ i }}.classList.remove("hover");
+							{{ groupID }}_dropzone{{ i }}.classList.remove("hover");
 						}
 
 						function dropzoneChange{{ i }}(e) {
 
 							var file = this.files[0];
 
-							{{ group:id() }}_dropzone{{ i }}.classList.remove("hover");
+							{{ groupID }}_dropzone{{ i }}.classList.remove("hover");
 
 							var match = this.accept.split(/, ?/).indexOf(file.type);
 
@@ -142,14 +142,14 @@
 								return;
 							};
 
-							{{ group:id() }}_dropzone{{ i }}.classList.add("dropped");
+							{{ groupID }}_dropzone{{ i }}.classList.add("dropped");
 
 							var reader = new FileReader(file);
 							reader.readAsDataURL(file);
 
 							reader.onload = function(e) {
 								var data = e.target.result;
-								document.getElementById("{{ group:id() }}_dropzone{{ i }}_preview").innerHTML = '<img src="' + data + '" />';
+								document.getElementById("{{ groupID }}_dropzone{{ i }}_preview").innerHTML = '<img src="' + data + '" />';
 
 								//
 								// Icon Callback:
@@ -159,7 +159,7 @@
 										id: "touchBarPanelCallback",
 										params: {
 											type: "updateIcon",
-											groupID: "{{ group:id() }}",
+											groupID: "{{ groupID }}",
 											buttonID: "{{ i }}",
 											icon: data,
 										},
@@ -179,9 +179,9 @@
 						--------------------------------------------------------------------------------
 						*/
 
-						var {{ group:id() }}_button{{ i }}_actionButton;
-						{{ group:id() }}_button{{ i }}_actionButton = document.getElementById("{{ group:id() }}_button{{ i }}_actionButton");
-						{{ group:id() }}_button{{ i }}_actionButton.addEventListener("click", updateAction{{ i }}, false);
+						var {{ groupID }}_button{{ i }}_actionButton;
+						{{ groupID }}_button{{ i }}_actionButton = document.getElementById("{{ groupID }}_button{{ i }}_actionButton");
+						{{ groupID }}_button{{ i }}_actionButton.addEventListener("click", updateAction{{ i }}, false);
 
 						function updateAction{{ i }}(e) {
 							//
@@ -192,7 +192,7 @@
 									id: "touchBarPanelCallback",
 									params: {
 										type: "updateAction",
-										groupID: "{{ group:id() }}",
+										groupID: "{{ groupID }}",
 										buttonID: "{{ i }}",
 									},
 								}
@@ -209,9 +209,9 @@
 						--------------------------------------------------------------------------------
 						*/
 
-						var {{ group:id() }}_button{{ i }}_clearActionButton;
-						{{ group:id() }}_button{{ i }}_clearActionButton = document.getElementById("{{ group:id() }}_button{{ i }}_clearActionButton");
-						{{ group:id() }}_button{{ i }}_clearActionButton.addEventListener("click", clearAction{{ i }}, false);
+						var {{ groupID }}_button{{ i }}_clearActionButton;
+						{{ groupID }}_button{{ i }}_clearActionButton = document.getElementById("{{ groupID }}_button{{ i }}_clearActionButton");
+						{{ groupID }}_button{{ i }}_clearActionButton.addEventListener("click", clearAction{{ i }}, false);
 
 						function clearAction{{ i }}(e) {
 							//
@@ -222,7 +222,7 @@
 									id: "touchBarPanelCallback",
 									params: {
 										type: "clearAction",
-										groupID: "{{ group:id() }}",
+										groupID: "{{ groupID }}",
 										buttonID: "{{ i }}",
 									},
 								}
