--- a/src/plugins/core/preferences/panels/midi/html/controls.html
+++ b/src/plugins/core/preferences/panels/midi/html/controls.html
@@ -10,7 +10,7 @@
 		<table class="midi">
 			<thead>
 				<tr>
-					<th class="midiRowAction">{{ i18n("actionOrWidget") }}</th>
+					<th class="midiRowAction">{{ i18n("action") }}</th>
 					<th class="midiRowActionButton"></th>
 					<th class="midiRowDevice">{{ i18n("device") }}</th>
 					<th class="midiRowCommandType">{{ i18n("number") }}</th>
