--- a/src/plugins/core/preferences/panels/midi/html/panel.html
+++ b/src/plugins/core/preferences/panels/midi/html/panel.html
@@ -1,3 +1,3 @@
 <style>{(css/midi.css)}</style>
-<h3 class="uiItem"><span class="midiGroupSelect"><span style="font-weight:normal; font-size:13px;">{{ i18n("application") }}: </span>{* midiGroupSelect *}</span>{{ i18n("layoutEditor") }}</h3>
+<h3 class="uiItem"><span class="midiGroupSelect"><span style="font-weight:normal; font-size:13px;">{{ i18n("application") }}: </span>{* midiGroupSelect *}</span>{{ i18n("midiEditor") }}</h3>
 {(html/controls.html, context)}
