--- a/src/plugins/core/preferences/panels/streamdeck/html/controls.html
+++ b/src/plugins/core/preferences/panels/streamdeck/html/controls.html
@@ -11,7 +11,7 @@
 			<thead>
 				<tr>
 					<th class="sdRowIcon">{{ i18n("icon") }}</th>
-					<th class="sdRowAction">{{ i18n("actionOrWidget") }}</th>
+					<th class="sdRowAction">{{ i18n("action") }}</th>
 					<th class="sdRowActionButton"></th>
 					<th class="sdRowLabel">{{ i18n("buttonLabel") }}</th>
 				</tr>
