--- a/src/plugins/core/preferences/panels/midi/html/controls.html
+++ b/src/plugins/core/preferences/panels/midi/html/controls.html
@@ -7,7 +7,7 @@
 	%}
 			{* editor(group) *}
 	{%	else %}
-		<table class="midi" style="{% if not midi.enabled() then %}display:none;{% end %}">
+		<table class="midi">
 			<thead>
 				<tr>
 					<th class="midiRowAction">{{ i18n("action") }}</th>
