--- a/src/plugins/core/preferences/panels/midi/html/controls.html
+++ b/src/plugins/core/preferences/panels/midi/html/controls.html
@@ -13,7 +13,7 @@
 					<th class="midiRowAction">{{ i18n("action") }}</th>
 					<th class="midiRowActionButton"></th>
 					<th class="midiRowDevice">{{ i18n("device") }}</th>
-					<th class="midiRowCommandType">{{ i18n("number") }}</th>
+					<th class="midiRowCommandType">{{ i18n("noteCC") }}</th>
 					<th class="midiRowChannel">{{ i18n("channel") }}</th>
 					<th class="midiRowValue">{{ i18n("value") }}</th>
 					<th class="midiRowLearn"></th>
