--- a/src/plugins/core/preferences/panels/midi/html/controls.html
+++ b/src/plugins/core/preferences/panels/midi/html/controls.html
@@ -7,7 +7,8 @@
 					<th class="midiRowAction">{{ i18nAction }}</th>
 					<th class="midiRowActionButton"></th>
 					<th class="midiRowDevice">{{ i18nDevice }}</th>
-					<th class="midiRowCommandType">{{ i18nNoteCC }}</th>
+					<th class="midiRowType">{{ i18nCommmandType }}</th>
+					<th class="midiRowNumber">{{ i18nNoteCC }}</th>
 					<th class="midiRowChannel">{{ i18nChannel }}</th>
 					<th class="midiRowValue">{{ i18nValue }}</th>
 					<th class="midiRowLearn"></th>
