--- a/src/plugins/core/preferences/panels/plugins/html/panel.html
+++ b/src/plugins/core/preferences/panels/plugins/html/panel.html
@@ -27,7 +27,7 @@
 				{* i18n "pluginsCustomFolderDetails" *}
 			</div>
 			<div class="divTableCell" style="width: 560px; vertical-align: middle; text-align: right;">
-				<a id="openPluginsFolder" class="button" href="#">{{ i18n "pluginsOpenPluginsFolder" }}</a>
+				<a id="openPluginsFolder" class="button" style="width:200px" href="#">{{ i18n "pluginsOpenPluginsFolder" }}</a>
 			</div>
 		</div>
 	</div>
