--- a/src/plugins/core/preferences/panels/midi/html/controls.html
+++ b/src/plugins/core/preferences/panels/midi/html/controls.html
@@ -1,6 +1,6 @@
 <div id="midiGroupControls" class="uiItem">
-{%	for id, group in pairs(groups) do %}
-	<div id="midiGroup_{{ id }}" class="midiGroup{{ id == defaultGroup and ' selected' or '' }}">
+{%	for __, groupID in pairs(groups) do %}
+	<div id="midiGroup_{{ groupID }}" class="midiGroup{{ groupID == defaultGroup and ' selected' or '' }}">
 		<table class="midi">
 			<thead>
 				<tr>
@@ -15,7 +15,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				{(html/rows.html, _.extend({group = group}, context))}
+				{(html/rows.html, _.extend({groupID = groupID}, context))}
 			</tbody>
 		</table>
 	</div>
