--- a/src/plugins/core/preferences/manager/html/panels.html
+++ b/src/plugins/core/preferences/manager/html/panels.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<style>{(css/preferences.css)}</style>
+		<script>{(js/list.js)}</script>
 		{% if not debugMode then %}
 		<script>
 			// Disable Right Clicking:
