--- a/src/plugins/core/preferences/panels/shortcuts/html/controls.html
+++ b/src/plugins/core/preferences/panels/shortcuts/html/controls.html
@@ -11,9 +11,10 @@
 		<table class="shortcuts">
 			<thead>
 				<tr>
-					<th class="rowLabel">{{ i18n "shortcutsLabel" }}</th>
-					<th class="rowModifier">{{ i18n "shortcutsModifier" }}</th>
-					<th class="rowKeyCode">{{ i18n "shortcutsKey" }}</th>
+					<th class="rowLabel">{{ i18nLabel }}</th>
+					<th class="rowAction">{{ i18nAction }}</th>
+					<th class="rowModifier">{{ i18nModifier }}</th>
+					<th class="rowKeyCode">{{ i18nKey }}</th>
 				</tr>
 			</thead>
 			<tbody class="list">
