--- a/src/plugins/core/preferences/panels/shortcuts/html/panel.html
+++ b/src/plugins/core/preferences/panels/shortcuts/html/panel.html
@@ -1,3 +1,3 @@
 <style>{(css/shortcuts.css)}</style>
-<h3 class="uiItem"><span class="groupSelect"><span style="font-weight:normal; font-size:13px;">{{ i18n("application") }}: </span>{* groupSelect *}</span>{{ i18n "customiseShortcuts" }}</h3>
+<h3 class="uiItem"><span class="groupSelect"><span style="font-weight:normal; font-size:13px;">{{ i18nApplication }}: </span>{* groupSelect *}</span>{{ i18nCustomiseShortcuts }}</h3>
 {(html/controls.html, context)}
